# claude-code-plugins

./: .gitignore  .orphaned_at  CLAUDE.md  PLUGIN-MIGRATION.md  README.md  TESTING_LOOP_SYSTEM.md  hooks.json  orchestrator-bugs-audit.md  pyproject.toml  schedule_with_note.sh
plugins/loop/: README.md  pyproject.toml
plugins/loop/.claude-plugin/: plugin.json
plugins/loop/hooks/: hooks.json
plugins/loop/hooks/scripts/: loop-stop-hook.py
plugins/loop/lib/: loop_manager.py
plugins/loop/skills/loop/: SKILL.md
plugins/loop/tests/e2e/: test-loop-cancel-project-dir.sh  test-loop-skill.sh  (+1 more)
plugins/yato/: CLAUDE.md  README.md  pyproject.toml
plugins/yato/.claude/: settings.json
plugins/yato/.claude-plugin/: plugin.json
plugins/yato/.evidences/: ALL-TESTS-SUMMARY.txt  CREATE-TEAM-FINAL-SUMMARY.txt  FINAL-TEST-SUMMARY.md  FRESH-TESTS-SUMMARY.txt  GREEN-LIGHT-SUMMARY.md  test-1-test-recipe-app-FINAL-layout.txt  test-1-test-recipe-app-FINAL.txt  test-1-test-recipe-app-visible.txt  test-1-test-recipe-app.txt  test-2-test-app-2.txt  test-2-test-task-tracker-FINAL.txt  test-2-test-task-tracker.txt  test-createteam-1.txt  test-createteam-3.txt  test-fresh-1-detailed.txt  test-fresh-3-detailed.txt  test-horizontal-layout.txt
plugins/yato/agents/: backend-developer.yml  code-cleanness-verifier.yml  code-reviewer.yml  designer.yml  developer.yml  devops.yml  frontend-developer.yml  fullstack-developer.yml  pm.md  pm.yml  qa.yml  reviewer.yml  security-reviewer.yml
plugins/yato/bin.archive/: README.md  assign-task.sh  cancel-checkin.sh  init-workflow.sh  restart-checkin-display.sh  setup-pm-loop.sh  workflow-utils.sh
plugins/yato/config/: defaults.conf
plugins/yato/hooks/: hooks.json
plugins/yato/lib/: __init__.py  agent_manager.py  checkin_scheduler.py  claude_control.py  config.py  orchestrator.py  session_registry.py  task_manager.py  tmux_utils.py  workflow_ops.py  workflow_registry.py
plugins/yato/templates/: engineer-briefing.md  planning-questions.md
(+298 files in other folders)
