[project]
name = "loop"
version = "1.0.0"
description = "Repeating prompt loops for Claude Code"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["croniter>=1.3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib"]
